@@ -1,3 +1,12 @@
+2017-11-15  Alex Christensen  <achristensen@webkit.org>
+
+        Revert r224885
+        https://bugs.webkit.org/show_bug.cgi?id=179719
+
+        * UIProcess/API/APIContentRuleListStore.cpp:
+        (API::compiledToFile):
+        r224885 was a speculative fix that did not fix anything on the bots.
+
 2017-11-15  Brent Fulgham  <bfulgham@apple.com>
 
         Unreviewed build fix after r224830.
